WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169284
TurnPort::OnSocketConnect is crashing
https://bugs.webkit.org/show_bug.cgi?id=169284
Summary
TurnPort::OnSocketConnect is crashing
youenn fablet
Reported
2017-03-07 09:17:26 PST
It is expecting TCP server address but got TLS, which should be fine too.
Attachments
Patch
(1.58 KB, patch)
2017-03-07 09:18 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-03-07 09:18:26 PST
Created
attachment 303663
[details]
Patch
WebKit Commit Bot
Comment 2
2017-03-07 16:54:37 PST
Comment on
attachment 303663
[details]
Patch Clearing flags on attachment: 303663 Committed
r213552
: <
http://trac.webkit.org/changeset/213552
>
WebKit Commit Bot
Comment 3
2017-03-07 16:54:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug