TurnPort::OnSocketConnect is crashing https://bugs.webkit.org/show_bug.cgi?id=169284

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-07
Reviewed by Eric Carlson.

* Source/webrtc/p2p/base/turnport.cc: Fixing the assertion.

Canonical link: https://commits.webkit.org/186312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213552 268f45cc-cd09-0410-ab3c-d52691b4dbfc